# socrates-edutech

./: .gitignore  README.md  pyproject.toml
paper/: socrates_paper.tex
results/backend/: api_performance.csv  database_benchmarks.csv
results/content/: extraction_accuracy.csv  readability_analysis.csv
results/dialectic/: learning_efficiency.csv
results/fortran/: performance_comparison.csv
results/mobile/: irt_calibration.csv  spaced_repetition_retention.csv
schemas/: learning_path.schema.json  student_progress.schema.json
scripts/: bootstrap_user_toolchains.sh  generate_results.py  run_all_checks.py  run_dialectic_cli.py  setup_wsl_ubuntu.sh  toolchain_env.sh  verify_toolchains.sh
src/arvr/: ar_scene.js  index.html
src/backend/Socrates.Api/: Program.cs  Socrates.Api.csproj  appsettings.json
src/content/: sample_formula.tex  sample_lesson.md  sample_note.html
src/fortran/: math_lib.f90
src/kotlin/: QuizEngine.kt  QuizEngineTest.kt  QuizEngineTestRunner.kt  build.gradle.kts  settings.gradle.kts
src/perl/: content_processor.pl
src/php/: lms_api.php
src/ruby/: Gemfile  analytics_api.rb  content_pipeline.rb
src/ruby/spec/: analytics_api_spec.rb  content_pipeline_spec.rb  spec_helper.rb
src/socrates_dialectic/: __init__.py  bkt.py  causal.py  cli.py  fortran_bridge.py  irt.py  models.py  optimizer.py  simulation.py  spacing.py
src/swift/: Package.swift
tests/: test_socrates.py
tests/SocratesTests/: RecommendationTests.cs  SocratesTests.csproj  StudentApiTests.cs  TestWebApplicationFactory.cs
tests/perl/: content_processor.t
(+9 files in other folders)
